# datasaurus

./: .coveragerc  .flake8  .gitignore  README.md  mkdocs.yml  pyproject.toml  rebuild.sh  todo.MD
datasaurus/: __init__.py
datasaurus/core/: __init__.py  loggers.py  storage.py
datasaurus/core/models/: __init__.py  base.py  columns.py  exceptions.py  factory.py  fields.py  format.py
datasaurus/core/storage/: __init__.py  azure.py  base.py  fields.py  format.py  mixins.py  storage.py
docker/: docker-compose.yml  mysql_init.sql
docs/: setup.md
examples/github_commits/: models.py  settings.py
examples/proj1/: models.py  settings.py
tests/core/models/: base_model.py  conftest.py  test_base_model.py  test_columns.py  test_df_creation.py  test_model.py
tests/core/storage/: conftest.py  test_storages.py  test_utils.py
tests/storage/: test_utils.py
