[tool.poetry]
name = "datasaurus"
version = "0.1.0"
description = ""
authors = ["surister <surister98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.17.15"
connectorx = "^0.3.1"
pyarrow = "^12.0.0"
adbc-driver-sqlite = "^0.4.0"
pandas = "^2.0.2"
sqlalchemy = "^2.0.15"

[tool.poetry.group.azure.dependencies]
azure-storage-blob = "^12.16.0"
azure-identity = "^1.13.0"



[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
