[tool.poetry]
name = "datasaurus"
version = "0.0.1dev2"
description = "Data Engineering framework based on Polars.rs"
repository = "https://www.github.com/surister/datasaurus"
authors = ["surister <surister98@gmail.com>"]
readme = "README.md"
license = "MIT"
keywords = ["python3", "data", "polars", "dataframes", "framework", 'data engineering']
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Topic :: Software Development :: Libraries"
]


[tool.poetry.dependencies]
python = "^3.8.1"
polars = "^0.17.15"
connectorx = [
    {version = "^0.3.1", python="^3.8"},
    {version= "^0.3.2a6", python="^3.11"}
]
pyarrow = "^12.0.0"
pandas = "^2.0.2"
sqlalchemy = "^2.0.15"
deltalake = "^0.10.0"

[tool.poetry.group.azure.dependencies]
azure-storage-blob = "^12.16.0"
azure-identity = "^1.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
flake8 = "^6.0.0"
coverage = "^7.2.7"
mkdocs = "^1.5.2"
mkdocs-material = "^9.1.21"

[tool.poetry.group.mysql.dependencies]
mysql-connector-python = "^8.0.33"
mysqlclient = "^2.1.1"
pymysql = "^1.0.3"

[tool.poetry.group.postgres.dependencies]
psycopg2 = "^2.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
